[package]
name = "chauncer"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",
] }

serde = { version = "1.0.228", features = ["derive"] }

log = "0.4.27"

env_logger = "0.11.8"

rfd = "0.17.2"

