[package]
name = "catapult"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true

[dependencies]
egui = "0.33.0"
egui_extras = {version = "0.33.0", features = ["default", "all_loaders"] }
eframe = { version = "0.33.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",
] }

serde = { version = "1.0.228", features = ["derive"] }
image = {version = "0.25.9", features = ["png", "jpeg"]}
rfd = "0.17.2"
open = "5.3.3"
file_icon_provider = "1.0.0"



